# flippy

./: CONTRIBUTING.md  Makefile  README.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: jekyll-gh-pages.yml  python-test.yml
benchmarking/: enumeration.ipynb
examples/: discrete.ipynb  inference_examples.ipynb  performance.ipynb  sample_prior.ipynb
flippy/: __init__.py  callentryexit.py  core.py  interpreter.py  transforms.py
flippy/distributions/: base.py  builtin_dists.py  random.py  scipy_dists.py
flippy/inference/: __init__.py  enumeration.py  inference.py  likelihood_weighting.py  max_marg_post.py  sample_prior.py  simpleenumeration.py
flippy/tests/: test_api.py  test_distributions.py  test_inference.py  test_interpreter.py  test_mcmc.py  test_no_dependencies.py  test_transforms.py
gorgo/: __init__.py  callentryexit.py  core.py  distributions.py  hashable.py  inference.py  interpreter.py  map.py  tools.py  transforms.py  types.py
gorgo/distributions/: __init__.py  base.py  builtin_dists.py  random.py  scipy_dists.py  support.py
gorgo/inference/: __init__.py  enumeration.py  graphenumeration.py  inference.py  likelihood_weighting.py  max_marg_post.py  metropolis_hastings.py  sample_prior.py  simpleenumeration.py
gorgo/tests/: test_api.py  test_core.py  test_distributions.py  test_hashable.py  test_inference.py  test_interpreter.py  (+5 more)
joss-paper/: paper.bib  paper.md
tutorials/: 00-intro.ipynb  01-RSA.ipynb  01-rsa.ipynb  02-LoT.ipynb  03-HMMs.ipynb  04-DP-MM.ipynb  05-Physics.ipynb  06-Sequential-DM.ipynb
(+10 files in other folders)
