[project]
name = "gorgo"
dynamic = ["version"]
description = 'Gorgo probabilistic programming language'
dependencies = [
    "frozendict==2.4.6",
    "joblib==1.4.2",
    "numpy==2.0.2",
    "scipy==1.14.1",
    "sympy~=1.13.3",
]

[build-system]
# setuptools-scm automatically adds all tracked files to package.
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gorgo"]

[tool.setuptools.package-data]
gorgo = ["version.txt"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "twine",
    "build",
    "pdoc==15.0.3",
    "jupyter==1.1.1",
]

[tool.pytest.ini_options]
python_files = "*test*.py"
testpaths = [
    "gorgo/tests",
]
